# c-course-design-project

./: .gitignore  2019程序设计基础课程设计题签.md  CMakeLists.txt  Github使用.md  LICENSE  Readme.md  TEST  arch.txt  creater_info.h  hr_sys.h  info_sys.h  menu.TXT  menu.h  oder.h  print_color.h  process_bar.h  sys_main.h  tags  test_main.c  如何发起pull_request.md
Test/: create_file.cpp  encryption.c  financial_sys_main.c  hr_sys_main.c  login_sys_main.c  main.c  main_sys_main.cpp  order_sys_main.c  store_sys_main.cpp  test.c  test_hr_sys_main.c  test_menu.c  test_order_sys.c  test_sra.c  test_time_related_main.c
financial_system/: financial.c  financial.h
for_cpp/: financial.cpp  financial.h  quick_sort.cpp  quick_sort.h
human_resource_system/: hr_repl.c  hr_repl.h  hr_run.c  hr_run.h  hr_sys.c  hr_sys.h
main_bar_sys/: order.h  store.cpp  store.h
order_system/: main.c  oder.c  order.c  order.h  order.h.gch  store.c  store.h  store.h.gch
single_store_system/: store.cpp  store.h
store_system/: create_file.c  create_file.cpp  main.c  main.cpp  menu.c  store.c  store.cpp  store.h  store.hpp  test_store_sys.cpp
store_system/zzzzzzzz_txt/: Drinks.txt  Snacks.txt  Tea.txt  Wine.txt  record.txt
tools/: menu.h  print_color.h  process_bar.h  quick_sort.c  quick_sort.h  regex_match.h  rsa.c  rsa.h  test_time_related_main.c  time_related.h
warehouse/: create_file.c  main.c
